--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "polars>=0.18.9",
     "scikit-learn>=1.3.0",
     "streamlit>=1.25.0",
-    "kaggle~=1.5.16",
+    "kaggle>=1.5.16",
     "jupyter-black~=0.3.4",
     "japanize_matplotlib~=1.1.3",
     "seaborn~=0.12.2",
