--- a/run/conf/train.yaml
+++ b/run/conf/train.yaml
@@ -14,7 +14,7 @@ defaults:
   - dir: local
   - dataset: seg
   - model: Spec2DCNN
-  - feature_extractor: LSTMFeatureExtractor
+  - feature_extractor: CNNSpectrogram
   - decoder: UNet1DDecoder
   - split: fold_0
 
@@ -45,8 +45,8 @@ aug:
   
 # post_process
 pp:
-  score_th: 0.02
-  distance: 10
+  score_th: 0.005
+  distance: 90
 
 # label
 labels:
@@ -60,6 +60,7 @@ features:
   # - "enmo"
   - "anglez_norm"
   - "enmo_norm"
+  - "anglez_diff"
   # - "step"
   # - "month_sin"
   # - "month_cos"
