--- a/run/conf/inference.yaml
+++ b/run/conf/inference.yaml
@@ -16,10 +16,10 @@ defaults:
   - model: Spec2DCNN
   - feature_extractor: CNNSpectrogram
   - decoder: UNet1DDecoder
+  - split: fold_0
 
 exp_name: dummy
 phase: test
-split: fold_0
 weight:
   exp_name: ${exp_name}
   run_name: single
